2-Entrega/y.output
Terminals unused in grammar

   TK_RAZAO
   TK_POTENCIA
   TK_CONCAT
   TK_MENOR_IGUAL
   TK_MAIOR_IGUAL
   TK_FUNC
   TK_RETORNA
   TK_SUPER
   TK_FIM
   TK_ERROR
   TK_END_E
   TK_FIMLINHA


State 30 conflicts: 2 shift/reduce
State 40 conflicts: 4 reduce/reduce
State 41 conflicts: 2 reduce/reduce
State 52 conflicts: 1 shift/reduce
State 64 conflicts: 4 reduce/reduce
State 78 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce, 2 reduce/reduce
State 86 conflicts: 2 shift/reduce
State 135 conflicts: 2 reduce/reduce
State 140 conflicts: 1 shift/reduce
State 143 conflicts: 2 shift/reduce
State 146 conflicts: 4 shift/reduce
State 150 conflicts: 2 shift/reduce
State 152 conflicts: 4 shift/reduce
State 155 conflicts: 2 shift/reduce
State 201 conflicts: 1 shift/reduce
State 225 conflicts: 1 shift/reduce
State 244 conflicts: 23 shift/reduce, 2 reduce/reduce
State 248 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: TK_TIPO_INT TK_MAIN '(' ')' BLOCO

    2 BLOCO: TK_ABRE INI_ESCOPO COMANDOS TK_FECHA
    3      | TK_ABRE INI_ESCOPO FIM_ESCOPO TK_FECHA

    4 BLOCO_IF: TK_ABRE INI_ESCOPO_IF COMANDOS TK_FECHA
    5         | TK_ABRE INI_ESCOPO_IF FIM_ESCOPO TK_FECHA
    6         | INI_ESCOPO_IF COMANDO

    7 BLOCO_SE: TK_ABRE COMANDOS TK_FECHA
    8         | TK_ABRE FIM_ESCOPO TK_FECHA
    9         | COMANDO

   10 COMANDOS: COMANDO COMANDOS
   11         | COMANDO

   12 INI_ESCOPO_IF: %empty

   13 INI_ESCOPO: %empty

   14 FIM_ESCOPO: %empty

   15 COMANDO: OPERACAO ';'
   16        | NUMEROS ';'
   17        | DECLARA ';'
   18        | ATRIBUICAO ';'
   19        | CONDICIONAL
   20        | LOOP
   21        | CMD_COUT ';'
   22        | CMD_CIN ';'
   23        | CONTINUE ';'
   24        | BREAK ';'
   25        | FUNCAO
   26        | SWITCHCASE
   27        | BLOCO_

   28 BLOCO_: BLOCO

   29 OPERACAO: ARITMETICO
   30         | LOGICO
   31         | RELACIONAL
   32         | EXECUTA_FUNCAO

   33 ARITMETICO: ARITMETICO OP_ARITMETICO ARITMETICO
   34           | ARITMETICO2
   35           | '(' ARITMETICO ')'
   36           | EXECUTA_FUNCAO

   37 ARITMETICO2: ARITs OP_ARITMETICO2 ARITs
   38            | '(' ARITMETICO2 ')'
   39            | NUMEROS

   40 ARITs: ARITMETICO2
   41      | '(' ARITMETICO ')'

   42 RELACIONAL: RELs OP_RELACIONAL RELs
   43           | '(' RELACIONAL ')'
   44           | ARITMETICO

   45 RELs: RELACIONAL

   46 LOGICO: LOGs OP_LOGICO LOGs
   47       | '(' LOGICO ')'

   48 LOGs: LOGICO
   49     | RELACIONAL

   50 OP_LOGICO: TK_AND
   51          | TK_OR

   52 OP_RELACIONAL: TK_DIFERENTE
   53              | TK_IGUAL
   54              | TK_MENOR
   55              | TK_MAIOR

   56 OP_ARITMETICO: TK_MAIS
   57              | TK_MENOS
   58              | TK_DIVISAO
   59              | TK_MULT

   60 OP_ARITMETICO2: TK_DIVISAO
   61               | TK_MULT

   62 DECLARA: TIPO TK_ID

   63 ATRIBUICAO: TK_ID TK_ATRIBUICAO OPERACAO
   64           | DECLARA_E_ATRIBUI
   65           | INCREMENTAL

   66 INCREMENTAL: TK_ID TK_MENOS TK_MENOS
   67            | TK_ID TK_MAIS TK_MAIS

   68 DECLARA_E_ATRIBUI: TIPO IDs TK_ATRIBUICAO OPs

   69 TIPO: TK_TIPO_STRING
   70     | TK_TIPO_FLOAT
   71     | TK_TIPO_CHAR
   72     | TK_TIPO_BOOL
   73     | TK_TIPO_INT

   74 NUMEROS: TK_INT
   75        | TK_CHAR
   76        | TK_FLOAT
   77        | TK_ID
   78        | TK_STRING
   79        | TK_BOOL

   80 IDs: IDs ',' TK_ID
   81    | TK_ID

   82 OPs: OPs ',' OPERACAO
   83    | OPERACAO

   84 CONDICIONAL: INI_ESCOPO_IF IF ELSEs
   85            | INI_ESCOPO_IF IF

   86 IF: TK_IF '(' RELACIONAL ')' BLOCO_IF

   87 ELSEs: ELSE ELSEs
   88      | ELSE

   89 ELSE: TK_ELIF '(' RELACIONAL ')' BLOCO_IF
   90     | TK_ELSE BLOCO_IF

   91 SWITCHCASE: SWITCH TK_ABRE INI_ESCOPO CASEs TK_FECHA
   92           | SWITCH TK_ABRE INI_ESCOPO CASEs DEFAULT TK_FECHA

   93 SWITCH: TK_SWITCH '(' OPERACAO ')'

   94 CASEs: CASE CASEs
   95      | CASE

   96 CASE: TK_CASE OPERACAO ':' BLOCO

   97 DEFAULT: TK_DEFAULT ':' BLOCO

   98 BREAK: TK_BREAK

   99 CONTINUE: TK_CONTINUE

  100 LOOP: TK_WHILE '(' RELACIONAL ')' BLOCO
  101     | INI_ESCOPO TK_FOR '(' ATRIBUICAO ';' RELACIONAL ';' ATRIBUICAO ')' BLOCO_SE
  102     | TK_DO BLOCO TK_WHILE '(' RELACIONAL ')' ';'

  103 CMD_CIN: TK_VAR TIPO TK_ID TK_ATRIBUICAO TK_READ
  104        | TK_GLOBAL TK_VAR TIPO TK_ID TK_ATRIBUICAO TK_READ
  105        | TK_READ '(' TK_ID ')'

  106 CMD_COUT: TK_WRITE '(' OPERACAO ')'

  107 FUNCAO: ASSINATURA TK_ABRE RETORNO TK_FECHA
  108       | ASSINATURA TK_ABRE COMANDOS RETORNO TK_FECHA
  109       | ASSINATURA_VOID BLOCO

  110 ASSINATURA: TIPO TK_ID '(' INI_ESCOPO PARAMs ')'
  111           | TIPO TK_ID '(' ')' INI_ESCOPO

  112 ASSINATURA_VOID: TK_VOID TK_ID '(' ')'

  113 PARAMs: PARAMs ',' DECLARA
  114       | DECLARA

  115 EXECUTA_FUNCAO: TK_ID '(' OPs ')'
  116               | TK_ID '(' ')'

  117 RETORNO: TK_RETURN RETORNOS ';'

  118 RETORNOS: RETORNOS ',' OPERACAO
  119         | OPERACAO


Terminals, with rules where they appear

$end (0) 0
'(' (40) 1 35 38 41 43 47 86 89 93 100 101 102 105 106 110 111 112
    115 116
')' (41) 1 35 38 41 43 47 86 89 93 100 101 102 105 106 110 111 112
    115 116
',' (44) 80 82 113 118
':' (58) 96 97
';' (59) 15 16 17 18 21 22 23 24 101 102 117
error (256)
TK_MAIS (258) 56 67
TK_MENOS (259) 57 66
TK_MULT (260) 59 61
TK_RAZAO (261)
TK_POTENCIA (262)
TK_CONCAT (263)
TK_AND (264) 50
TK_OR (265) 51
TK_MAIOR (266) 55
TK_MENOR (267) 54
TK_DIFERENTE (268) 52
TK_IGUAL (269) 53
TK_MENOR_IGUAL (270)
TK_MAIOR_IGUAL (271)
TK_ATRIBUICAO (272) 63 68 103 104
TK_VAR (273) 103 104
TK_GLOBAL (274) 104
TK_TIPO_STRING (275) 69
TK_TIPO_FLOAT (276) 70
TK_TIPO_CHAR (277) 71
TK_TIPO_BOOL (278) 72
TK_TIPO_INT (279) 1 73
TK_INT (280) 74
TK_FLOAT (281) 76
TK_CHAR (282) 75
TK_BOOL (283) 79
TK_STRING (284) 78
TK_VOID (285) 112
TK_WHILE (286) 100 102
TK_FOR (287) 101
TK_SWITCH (288) 93
TK_CASE (289) 96
TK_IF (290) 86
TK_ELSE (291) 90
TK_ELIF (292) 89
TK_BREAK (293) 98
TK_CONTINUE (294) 99
TK_DO (295) 102
TK_DEFAULT (296) 97
TK_ABRE (297) 2 3 4 5 7 8 91 92 107 108
TK_FECHA (298) 2 3 4 5 7 8 91 92 107 108
TK_FUNC (299)
TK_RETORNA (300)
TK_RETURN (301) 117
TK_READ (302) 103 104 105
TK_WRITE (303) 106
TK_SUPER (304)
TK_MAIN (305) 1
TK_ID (306) 62 63 66 67 77 80 81 103 104 105 110 111 112 115 116
TK_FIM (307)
TK_ERROR (308)
TK_END_E (309)
TK_FIMLINHA (310)
TK_DIVISAO (311) 58 60


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
S (63)
    on left: 1, on right: 0
BLOCO (64)
    on left: 2 3, on right: 1 28 96 97 100 102 109
BLOCO_IF (65)
    on left: 4 5 6, on right: 86 89 90
BLOCO_SE (66)
    on left: 7 8 9, on right: 101
COMANDOS (67)
    on left: 10 11, on right: 2 4 7 10 108
INI_ESCOPO_IF (68)
    on left: 12, on right: 4 5 6 84 85
INI_ESCOPO (69)
    on left: 13, on right: 2 3 91 92 101 110 111
FIM_ESCOPO (70)
    on left: 14, on right: 3 5 8
COMANDO (71)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27, on right: 6 9
    10 11
BLOCO_ (72)
    on left: 28, on right: 27
OPERACAO (73)
    on left: 29 30 31 32, on right: 15 63 82 83 93 96 106 118 119
ARITMETICO (74)
    on left: 33 34 35 36, on right: 29 33 35 41 44
ARITMETICO2 (75)
    on left: 37 38 39, on right: 34 38 40
ARITs (76)
    on left: 40 41, on right: 37
RELACIONAL (77)
    on left: 42 43 44, on right: 31 43 45 49 86 89 100 101 102
RELs (78)
    on left: 45, on right: 42
LOGICO (79)
    on left: 46 47, on right: 30 47 48
LOGs (80)
    on left: 48 49, on right: 46
OP_LOGICO (81)
    on left: 50 51, on right: 46
OP_RELACIONAL (82)
    on left: 52 53 54 55, on right: 42
OP_ARITMETICO (83)
    on left: 56 57 58 59, on right: 33
OP_ARITMETICO2 (84)
    on left: 60 61, on right: 37
DECLARA (85)
    on left: 62, on right: 17 113 114
ATRIBUICAO (86)
    on left: 63 64 65, on right: 18 101
INCREMENTAL (87)
    on left: 66 67, on right: 65
DECLARA_E_ATRIBUI (88)
    on left: 68, on right: 64
TIPO (89)
    on left: 69 70 71 72 73, on right: 62 68 103 104 110 111
NUMEROS (90)
    on left: 74 75 76 77 78 79, on right: 16 39
IDs (91)
    on left: 80 81, on right: 68 80
OPs (92)
    on left: 82 83, on right: 68 82 115
CONDICIONAL (93)
    on left: 84 85, on right: 19
IF (94)
    on left: 86, on right: 84 85
ELSEs (95)
    on left: 87 88, on right: 84 87
ELSE (96)
    on left: 89 90, on right: 87 88
SWITCHCASE (97)
    on left: 91 92, on right: 26
SWITCH (98)
    on left: 93, on right: 91 92
CASEs (99)
    on left: 94 95, on right: 91 92 94
CASE (100)
    on left: 96, on right: 94 95
DEFAULT (101)
    on left: 97, on right: 92
BREAK (102)
    on left: 98, on right: 24
CONTINUE (103)
    on left: 99, on right: 23
LOOP (104)
    on left: 100 101 102, on right: 20
CMD_CIN (105)
    on left: 103 104 105, on right: 22
CMD_COUT (106)
    on left: 106, on right: 21
FUNCAO (107)
    on left: 107 108 109, on right: 25
ASSINATURA (108)
    on left: 110 111, on right: 107 108
ASSINATURA_VOID (109)
    on left: 112, on right: 109
PARAMs (110)
    on left: 113 114, on right: 110 113
EXECUTA_FUNCAO (111)
    on left: 115 116, on right: 32 36
RETORNO (112)
    on left: 117, on right: 107 108
RETORNOS (113)
    on left: 118 119, on right: 117 118


State 0

    0 $accept: . S $end

    TK_TIPO_INT  shift, and go to state 1

    S  go to state 2


State 1

    1 S: TK_TIPO_INT . TK_MAIN '(' ')' BLOCO

    TK_MAIN  shift, and go to state 3


State 2

    0 $accept: S . $end

    $end  shift, and go to state 4


State 3

    1 S: TK_TIPO_INT TK_MAIN . '(' ')' BLOCO

    '('  shift, and go to state 5


State 4

    0 $accept: S $end .

    $default  accept


State 5

    1 S: TK_TIPO_INT TK_MAIN '(' . ')' BLOCO

    ')'  shift, and go to state 6


State 6

    1 S: TK_TIPO_INT TK_MAIN '(' ')' . BLOCO

    TK_ABRE  shift, and go to state 7

    BLOCO  go to state 8


State 7

    2 BLOCO: TK_ABRE . INI_ESCOPO COMANDOS TK_FECHA
    3      | TK_ABRE . INI_ESCOPO FIM_ESCOPO TK_FECHA

    $default  reduce using rule 13 (INI_ESCOPO)

    INI_ESCOPO  go to state 9


State 8

    1 S: TK_TIPO_INT TK_MAIN '(' ')' BLOCO .

    $default  reduce using rule 1 (S)


State 9

    2 BLOCO: TK_ABRE INI_ESCOPO . COMANDOS TK_FECHA
    3      | TK_ABRE INI_ESCOPO . FIM_ESCOPO TK_FECHA

    TK_VAR          shift, and go to state 10
    TK_GLOBAL       shift, and go to state 11
    TK_TIPO_STRING  shift, and go to state 12
    TK_TIPO_FLOAT   shift, and go to state 13
    TK_TIPO_CHAR    shift, and go to state 14
    TK_TIPO_BOOL    shift, and go to state 15
    TK_TIPO_INT     shift, and go to state 16
    TK_INT          shift, and go to state 17
    TK_FLOAT        shift, and go to state 18
    TK_CHAR         shift, and go to state 19
    TK_BOOL         shift, and go to state 20
    TK_STRING       shift, and go to state 21
    TK_VOID         shift, and go to state 22
    TK_WHILE        shift, and go to state 23
    TK_SWITCH       shift, and go to state 24
    TK_BREAK        shift, and go to state 25
    TK_CONTINUE     shift, and go to state 26
    TK_DO           shift, and go to state 27
    TK_ABRE         shift, and go to state 7
    TK_READ         shift, and go to state 28
    TK_WRITE        shift, and go to state 29
    TK_ID           shift, and go to state 30
    '('             shift, and go to state 31

    TK_FOR    reduce using rule 13 (INI_ESCOPO)
    TK_FECHA  reduce using rule 14 (FIM_ESCOPO)
    $default  reduce using rule 12 (INI_ESCOPO_IF)

    BLOCO              go to state 32
    COMANDOS           go to state 33
    INI_ESCOPO_IF      go to state 34
    INI_ESCOPO         go to state 35
    FIM_ESCOPO         go to state 36
    COMANDO            go to state 37
    BLOCO_             go to state 38
    OPERACAO           go to state 39
    ARITMETICO         go to state 40
    ARITMETICO2        go to state 41
    ARITs              go to state 42
    RELACIONAL         go to state 43
    RELs               go to state 44
    LOGICO             go to state 45
    LOGs               go to state 46
    DECLARA            go to state 47
    ATRIBUICAO         go to state 48
    INCREMENTAL        go to state 49
    DECLARA_E_ATRIBUI  go to state 50
    TIPO               go to state 51
    NUMEROS            go to state 52
    CONDICIONAL        go to state 53
    SWITCHCASE         go to state 54
    SWITCH             go to state 55
    BREAK              go to state 56
    CONTINUE           go to state 57
    LOOP               go to state 58
    CMD_CIN            go to state 59
    CMD_COUT           go to state 60
    FUNCAO             go to state 61
    ASSINATURA         go to state 62
    ASSINATURA_VOID    go to state 63
    EXECUTA_FUNCAO     go to state 64


State 10

  103 CMD_CIN: TK_VAR . TIPO TK_ID TK_ATRIBUICAO TK_READ

    TK_TIPO_STRING  shift, and go to state 12
    TK_TIPO_FLOAT   shift, and go to state 13
    TK_TIPO_CHAR    shift, and go to state 14
    TK_TIPO_BOOL    shift, and go to state 15
    TK_TIPO_INT     shift, and go to state 16

    TIPO  go to state 65


State 11

  104 CMD_CIN: TK_GLOBAL . TK_VAR TIPO TK_ID TK_ATRIBUICAO TK_READ

    TK_VAR  shift, and go to state 66


State 12

   69 TIPO: TK_TIPO_STRING .

    $default  reduce using rule 69 (TIPO)


State 13

   70 TIPO: TK_TIPO_FLOAT .

    $default  reduce using rule 70 (TIPO)


State 14

   71 TIPO: TK_TIPO_CHAR .

    $default  reduce using rule 71 (TIPO)


State 15

   72 TIPO: TK_TIPO_BOOL .

    $default  reduce using rule 72 (TIPO)


State 16

   73 TIPO: TK_TIPO_INT .

    $default  reduce using rule 73 (TIPO)


State 17

   74 NUMEROS: TK_INT .

    $default  reduce using rule 74 (NUMEROS)


State 18

   76 NUMEROS: TK_FLOAT .

    $default  reduce using rule 76 (NUMEROS)


State 19

   75 NUMEROS: TK_CHAR .

    $default  reduce using rule 75 (NUMEROS)


State 20

   79 NUMEROS: TK_BOOL .

    $default  reduce using rule 79 (NUMEROS)


State 21

   78 NUMEROS: TK_STRING .

    $default  reduce using rule 78 (NUMEROS)


State 22

  112 ASSINATURA_VOID: TK_VOID . TK_ID '(' ')'

    TK_ID  shift, and go to state 67


State 23

  100 LOOP: TK_WHILE . '(' RELACIONAL ')' BLOCO

    '('  shift, and go to state 68


State 24

   93 SWITCH: TK_SWITCH . '(' OPERACAO ')'

    '('  shift, and go to state 69


State 25

   98 BREAK: TK_BREAK .

    $default  reduce using rule 98 (BREAK)


State 26

   99 CONTINUE: TK_CONTINUE .

    $default  reduce using rule 99 (CONTINUE)


State 27

  102 LOOP: TK_DO . BLOCO TK_WHILE '(' RELACIONAL ')' ';'

    TK_ABRE  shift, and go to state 7

    BLOCO  go to state 70


State 28

  105 CMD_CIN: TK_READ . '(' TK_ID ')'

    '('  shift, and go to state 71


State 29

  106 CMD_COUT: TK_WRITE . '(' OPERACAO ')'

    '('  shift, and go to state 72


State 30

   63 ATRIBUICAO: TK_ID . TK_ATRIBUICAO OPERACAO
   66 INCREMENTAL: TK_ID . TK_MENOS TK_MENOS
   67            | TK_ID . TK_MAIS TK_MAIS
   77 NUMEROS: TK_ID .
  115 EXECUTA_FUNCAO: TK_ID . '(' OPs ')'
  116               | TK_ID . '(' ')'

    TK_MAIS        shift, and go to state 73
    TK_MENOS       shift, and go to state 74
    TK_ATRIBUICAO  shift, and go to state 75
    '('            shift, and go to state 76

    TK_MAIS   [reduce using rule 77 (NUMEROS)]
    TK_MENOS  [reduce using rule 77 (NUMEROS)]
    $default  reduce using rule 77 (NUMEROS)


State 31

   35 ARITMETICO: '(' . ARITMETICO ')'
   38 ARITMETICO2: '(' . ARITMETICO2 ')'
   41 ARITs: '(' . ARITMETICO ')'
   43 RELACIONAL: '(' . RELACIONAL ')'
   47 LOGICO: '(' . LOGICO ')'

    TK_INT     shift, and go to state 17
    TK_FLOAT   shift, and go to state 18
    TK_CHAR    shift, and go to state 19
    TK_BOOL    shift, and go to state 20
    TK_STRING  shift, and go to state 21
    TK_ID      shift, and go to state 77
    '('        shift, and go to state 31

    ARITMETICO      go to state 78
    ARITMETICO2     go to state 79
    ARITs           go to state 42
    RELACIONAL      go to state 80
    RELs            go to state 44
    LOGICO          go to state 81
    LOGs            go to state 46
    NUMEROS         go to state 82
    EXECUTA_FUNCAO  go to state 83


State 32

   28 BLOCO_: BLOCO .

    $default  reduce using rule 28 (BLOCO_)


State 33

    2 BLOCO: TK_ABRE INI_ESCOPO COMANDOS . TK_FECHA

    TK_FECHA  shift, and go to state 84


State 34

   84 CONDICIONAL: INI_ESCOPO_IF . IF ELSEs
   85            | INI_ESCOPO_IF . IF

    TK_IF  shift, and go to state 85

    IF  go to state 86


State 35

  101 LOOP: INI_ESCOPO . TK_FOR '(' ATRIBUICAO ';' RELACIONAL ';' ATRIBUICAO ')' BLOCO_SE

    TK_FOR  shift, and go to state 87


State 36

    3 BLOCO: TK_ABRE INI_ESCOPO FIM_ESCOPO . TK_FECHA

    TK_FECHA  shift, and go to state 88


State 37

   10 COMANDOS: COMANDO . COMANDOS
   11         | COMANDO .

    TK_VAR          shift, and go to state 10
    TK_GLOBAL       shift, and go to state 11
    TK_TIPO_STRING  shift, and go to state 12
    TK_TIPO_FLOAT   shift, and go to state 13
    TK_TIPO_CHAR    shift, and go to state 14
    TK_TIPO_BOOL    shift, and go to state 15
    TK_TIPO_INT     shift, and go to state 16
    TK_INT          shift, and go to state 17
    TK_FLOAT        shift, and go to state 18
    TK_CHAR         shift, and go to state 19
    TK_BOOL         shift, and go to state 20
    TK_STRING       shift, and go to state 21
    TK_VOID         shift, and go to state 22
    TK_WHILE        shift, and go to state 23
    TK_SWITCH       shift, and go to state 24
    TK_BREAK        shift, and go to state 25
    TK_CONTINUE     shift, and go to state 26
    TK_DO           shift, and go to state 27
    TK_ABRE         shift, and go to state 7
    TK_READ         shift, and go to state 28
    TK_WRITE        shift, and go to state 29
    TK_ID           shift, and go to state 30
    '('             shift, and go to state 31

    TK_FOR    reduce using rule 13 (INI_ESCOPO)
    TK_IF     reduce using rule 12 (INI_ESCOPO_IF)
    $default  reduce using rule 11 (COMANDOS)

    BLOCO              go to state 32
    COMANDOS           go to state 89
    INI_ESCOPO_IF      go to state 34
    INI_ESCOPO         go to state 35
    COMANDO            go to state 37
    BLOCO_             go to state 38
    OPERACAO           go to state 39
    ARITMETICO         go to state 40
    ARITMETICO2        go to state 41
    ARITs              go to state 42
    RELACIONAL         go to state 43
    RELs               go to state 44
    LOGICO             go to state 45
    LOGs               go to state 46
    DECLARA            go to state 47
    ATRIBUICAO         go to state 48
    INCREMENTAL        go to state 49
    DECLARA_E_ATRIBUI  go to state 50
    TIPO               go to state 51
    NUMEROS            go to state 52
    CONDICIONAL        go to state 53
    SWITCHCASE         go to state 54
    SWITCH             go to state 55
    BREAK              go to state 56
    CONTINUE           go to state 57
    LOOP               go to state 58
    CMD_CIN            go to state 59
    CMD_COUT           go to state 60
    FUNCAO             go to state 61
    ASSINATURA         go to state 62
    ASSINATURA_VOID    go to state 63
    EXECUTA_FUNCAO     go to state 64


State 38

   27 COMANDO: BLOCO_ .

    $default  reduce using rule 27 (COMANDO)


State 39

   15 COMANDO: OPERACAO . ';'

    ';'  shift, and go to state 90


State 40

   29 OPERACAO: ARITMETICO .
   33 ARITMETICO: ARITMETICO . OP_ARITMETICO ARITMETICO
   44 RELACIONAL: ARITMETICO .

    TK_MAIS     shift, and go to state 91
    TK_MENOS    shift, and go to state 92
    TK_MULT     shift, and go to state 93
    TK_DIVISAO  shift, and go to state 94

    ')'       reduce using rule 29 (OPERACAO)
    ')'       [reduce using rule 44 (RELACIONAL)]
    ';'       reduce using rule 29 (OPERACAO)
    ';'       [reduce using rule 44 (RELACIONAL)]
    ','       reduce using rule 29 (OPERACAO)
    ','       [reduce using rule 44 (RELACIONAL)]
    ':'       reduce using rule 29 (OPERACAO)
    ':'       [reduce using rule 44 (RELACIONAL)]
    $default  reduce using rule 44 (RELACIONAL)

    OP_ARITMETICO  go to state 95


State 41

   34 ARITMETICO: ARITMETICO2 .
   40 ARITs: ARITMETICO2 .

    TK_MULT     reduce using rule 34 (ARITMETICO)
    TK_MULT     [reduce using rule 40 (ARITs)]
    TK_DIVISAO  reduce using rule 34 (ARITMETICO)
    TK_DIVISAO  [reduce using rule 40 (ARITs)]
    $default    reduce using rule 34 (ARITMETICO)


State 42

   37 ARITMETICO2: ARITs . OP_ARITMETICO2 ARITs

    TK_MULT     shift, and go to state 96
    TK_DIVISAO  shift, and go to state 97

    OP_ARITMETICO2  go to state 98


State 43

   31 OPERACAO: RELACIONAL .
   45 RELs: RELACIONAL .
   49 LOGs: RELACIONAL .

    TK_AND        reduce using rule 49 (LOGs)
    TK_OR         reduce using rule 49 (LOGs)
    TK_MAIOR      reduce using rule 45 (RELs)
    TK_MENOR      reduce using rule 45 (RELs)
    TK_DIFERENTE  reduce using rule 45 (RELs)
    TK_IGUAL      reduce using rule 45 (RELs)
    $default      reduce using rule 31 (OPERACAO)


State 44

   42 RELACIONAL: RELs . OP_RELACIONAL RELs

    TK_MAIOR      shift, and go to state 99
    TK_MENOR      shift, and go to state 100
    TK_DIFERENTE  shift, and go to state 101
    TK_IGUAL      shift, and go to state 102

    OP_RELACIONAL  go to state 103


State 45

   30 OPERACAO: LOGICO .
   48 LOGs: LOGICO .

    TK_AND    reduce using rule 48 (LOGs)
    TK_OR     reduce using rule 48 (LOGs)
    $default  reduce using rule 30 (OPERACAO)


State 46

   46 LOGICO: LOGs . OP_LOGICO LOGs

    TK_AND  shift, and go to state 104
    TK_OR   shift, and go to state 105

    OP_LOGICO  go to state 106


State 47

   17 COMANDO: DECLARA . ';'

    ';'  shift, and go to state 107


State 48

   18 COMANDO: ATRIBUICAO . ';'

    ';'  shift, and go to state 108


State 49

   65 ATRIBUICAO: INCREMENTAL .

    $default  reduce using rule 65 (ATRIBUICAO)


State 50

   64 ATRIBUICAO: DECLARA_E_ATRIBUI .

    $default  reduce using rule 64 (ATRIBUICAO)


State 51

   62 DECLARA: TIPO . TK_ID
   68 DECLARA_E_ATRIBUI: TIPO . IDs TK_ATRIBUICAO OPs
  110 ASSINATURA: TIPO . TK_ID '(' INI_ESCOPO PARAMs ')'
  111           | TIPO . TK_ID '(' ')' INI_ESCOPO

    TK_ID  shift, and go to state 109

    IDs  go to state 110


State 52

   16 COMANDO: NUMEROS . ';'
   39 ARITMETICO2: NUMEROS .

    ';'  shift, and go to state 111

    ';'       [reduce using rule 39 (ARITMETICO2)]
    $default  reduce using rule 39 (ARITMETICO2)


State 53

   19 COMANDO: CONDICIONAL .

    $default  reduce using rule 19 (COMANDO)


State 54

   26 COMANDO: SWITCHCASE .

    $default  reduce using rule 26 (COMANDO)


State 55

   91 SWITCHCASE: SWITCH . TK_ABRE INI_ESCOPO CASEs TK_FECHA
   92           | SWITCH . TK_ABRE INI_ESCOPO CASEs DEFAULT TK_FECHA

    TK_ABRE  shift, and go to state 112


State 56

   24 COMANDO: BREAK . ';'

    ';'  shift, and go to state 113


State 57

   23 COMANDO: CONTINUE . ';'

    ';'  shift, and go to state 114


State 58

   20 COMANDO: LOOP .

    $default  reduce using rule 20 (COMANDO)


State 59

   22 COMANDO: CMD_CIN . ';'

    ';'  shift, and go to state 115


State 60

   21 COMANDO: CMD_COUT . ';'

    ';'  shift, and go to state 116


State 61

   25 COMANDO: FUNCAO .

    $default  reduce using rule 25 (COMANDO)


State 62

  107 FUNCAO: ASSINATURA . TK_ABRE RETORNO TK_FECHA
  108       | ASSINATURA . TK_ABRE COMANDOS RETORNO TK_FECHA

    TK_ABRE  shift, and go to state 117


State 63

  109 FUNCAO: ASSINATURA_VOID . BLOCO

    TK_ABRE  shift, and go to state 7

    BLOCO  go to state 118


State 64

   32 OPERACAO: EXECUTA_FUNCAO .
   36 ARITMETICO: EXECUTA_FUNCAO .

    ')'       reduce using rule 32 (OPERACAO)
    ')'       [reduce using rule 36 (ARITMETICO)]
    ';'       reduce using rule 32 (OPERACAO)
    ';'       [reduce using rule 36 (ARITMETICO)]
    ','       reduce using rule 32 (OPERACAO)
    ','       [reduce using rule 36 (ARITMETICO)]
    ':'       reduce using rule 32 (OPERACAO)
    ':'       [reduce using rule 36 (ARITMETICO)]
    $default  reduce using rule 36 (ARITMETICO)


State 65

  103 CMD_CIN: TK_VAR TIPO . TK_ID TK_ATRIBUICAO TK_READ

    TK_ID  shift, and go to state 119


State 66

  104 CMD_CIN: TK_GLOBAL TK_VAR . TIPO TK_ID TK_ATRIBUICAO TK_READ

    TK_TIPO_STRING  shift, and go to state 12
    TK_TIPO_FLOAT   shift, and go to state 13
    TK_TIPO_CHAR    shift, and go to state 14
    TK_TIPO_BOOL    shift, and go to state 15
    TK_TIPO_INT     shift, and go to state 16

    TIPO  go to state 120


State 67

  112 ASSINATURA_VOID: TK_VOID TK_ID . '(' ')'

    '('  shift, and go to state 121


State 68

  100 LOOP: TK_WHILE '(' . RELACIONAL ')' BLOCO

    TK_INT     shift, and go to state 17
    TK_FLOAT   shift, and go to state 18
    TK_CHAR    shift, and go to state 19
    TK_BOOL    shift, and go to state 20
    TK_STRING  shift, and go to state 21
    TK_ID      shift, and go to state 77
    '('        shift, and go to state 122

    ARITMETICO      go to state 123
    ARITMETICO2     go to state 41
    ARITs           go to state 42
    RELACIONAL      go to state 124
    RELs            go to state 44
    NUMEROS         go to state 82
    EXECUTA_FUNCAO  go to state 83


State 69

   93 SWITCH: TK_SWITCH '(' . OPERACAO ')'

    TK_INT     shift, and go to state 17
    TK_FLOAT   shift, and go to state 18
    TK_CHAR    shift, and go to state 19
    TK_BOOL    shift, and go to state 20
    TK_STRING  shift, and go to state 21
    TK_ID      shift, and go to state 77
    '('        shift, and go to state 31

    OPERACAO        go to state 125
    ARITMETICO      go to state 40
    ARITMETICO2     go to state 41
    ARITs           go to state 42
    RELACIONAL      go to state 43
    RELs            go to state 44
    LOGICO          go to state 45
    LOGs            go to state 46
    NUMEROS         go to state 82
    EXECUTA_FUNCAO  go to state 64


State 70

  102 LOOP: TK_DO BLOCO . TK_WHILE '(' RELACIONAL ')' ';'

    TK_WHILE  shift, and go to state 126


State 71

  105 CMD_CIN: TK_READ '(' . TK_ID ')'

    TK_ID  shift, and go to state 127


State 72

  106 CMD_COUT: TK_WRITE '(' . OPERACAO ')'

    TK_INT     shift, and go to state 17
    TK_FLOAT   shift, and go to state 18
    TK_CHAR    shift, and go to state 19
    TK_BOOL    shift, and go to state 20
    TK_STRING  shift, and go to state 21
    TK_ID      shift, and go to state 77
    '('        shift, and go to state 31

    OPERACAO        go to state 128
    ARITMETICO      go to state 40
    ARITMETICO2     go to state 41
    ARITs           go to state 42
    RELACIONAL      go to state 43
    RELs            go to state 44
    LOGICO          go to state 45
    LOGs            go to state 46
    NUMEROS         go to state 82
    EXECUTA_FUNCAO  go to state 64


State 73

   67 INCREMENTAL: TK_ID TK_MAIS . TK_MAIS

    TK_MAIS  shift, and go to state 129


State 74

   66 INCREMENTAL: TK_ID TK_MENOS . TK_MENOS

    TK_MENOS  shift, and go to state 130


State 75

   63 ATRIBUICAO: TK_ID TK_ATRIBUICAO . OPERACAO

    TK_INT     shift, and go to state 17
    TK_FLOAT   shift, and go to state 18
    TK_CHAR    shift, and go to state 19
    TK_BOOL    shift, and go to state 20
    TK_STRING  shift, and go to state 21
    TK_ID      shift, and go to state 77
    '('        shift, and go to state 31
